--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,25 @@
+html { 
+margin-left: calc(100vw - 100%); 
+}
+
+ul {
+    margin-top : 10px !important;
+}
+
+h6 {
+    font-weight: bold; 
+}
+
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
+a:hover {
+    color: #2196F3;
+    background-color: #2196F3 !important;
+}
+
 .grid-hero {
     margin-top: 10rem;
     margin-bottom: 10rem;
